Fix horizontal scroll bar.

--- a/assets/css/_generic.scss
+++ b/assets/css/_generic.scss
@@ -869,7 +869,7 @@ input[type=text], select, textarea {
 
         .description {
             position: absolute;
-            overflow: scroll;
+            overflow-y: scroll;
             top: 0;
             right: 0;
             bottom: 0;
